--- a/src/styles.css
+++ b/src/styles.css
@@ -12,138 +12,138 @@
 }
 
 .editor-block{
-    display: inline-block;
-    position: relative;
-    color: white;
-    padding: 3px 8px;
-    border-radius: 4px;
-    margin: 3px 0;
-    vertical-align: middle;
-  }
-  
-  .delete-block{
-    position: absolute;
-    left: 0;
-    top: 0%;
-    width: 100%;
-    text-align: center;
-    opacity: 0;
-    z-index: -1;
-  }
-  .delete-block.active{
-    opacity: 1;
-    z-index: 1;
-    top: 100%;
-    transition-duration: 200ms;
-    padding-top: 3px;
-  }
-  .delete-block .fa{
-    background: dimgrey;
-    width: 20px;
-    height: 20px;
-    line-height: 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    color: white;
-    font-size: 12px;
-  }
-  .delete-block .fa:hover{
-    background: black;
-  }
-  
-  .editor-block-location{
-    background: #66aeb5;
-  }
-  .editor-block-and{
-    background: #58b152;
-  }
-  .editor-block-or{
-    background: #5285b1;
-  }
-  .editor-block-ne{
-    background: #d65959;
-  }
-  .editor-block-left_bracket,
-  .editor-block-right_bracket{
-    color: black;
-    font-size: 18px;
-    background: #dddddd;
-  }
-  .editor-block-device_model{
-    background: #9982b3;
-  }
-  .editor-block-device_type{
-    background: #82b386;
-  }
-  .editor-block-device_brand{
-    background: #b39682;
-  }
-  .editor-block-schedule{
-    background: #85AC5D;
-  }
-  .editor-block-rat{
-    background: #5d81ac;
-  }
-  .editor-block-apn{
-    background: #9e5c6b;
-  }
-  
-  .editor-block input{
-    background: rgba(255, 255, 255, 0.5);
-    border: 0;
-    margin-left: 7px;
-    width: 100px;
-  }
-  
-  .editor-block select{
-    height: 20px;
-  }
-  
-  .caret{
-    width: 9px;
-    height: 2em;
-    display: inline-block;
-    vertical-align: middle;
-  }
-  .caret input{
-    display: none;
-  }
-  .caret input:checked ~ div{
-    display: block;
-    width: 1px;
-    height: 100%;
-    margin-left: 4px;
-    animation: blink-caret .75s step-end infinite;
-  }
-  
-  .editor-panel{
-    background: white;
-    min-width: 100px;
-    min-height: 100px;
-    border: 1px solid #ddd;
-    padding: 4px 8px;
-  }
-  
-  .editor-panel:focus,
-  .editor-panel.focus{
-    outline: 1px solid #9fc6ff;
-  }
-  
-  .editor-add-buttons li{
-    display: inline-block;
-  }
-  .editor-add-buttons div{
-    background: #5e90c1;
-    color: white;
-    cursor: pointer;
-    margin: 3px;
-    padding: 2px 8px;
-    border-radius: 3px;
-  }
-  .editor-add-buttons div:hover{
-    background: #256097;
-  }
+  display: inline-block;
+  position: relative;
+  color: white;
+  padding: 3px 8px;
+  border-radius: 4px;
+  margin: 3px 0;
+  vertical-align: middle;
+}
 
-  .disabled-empty-text:disabled{
-    color: transparent;
-  }
+.delete-block{
+  position: absolute;
+  left: 0;
+  top: 0%;
+  width: 100%;
+  text-align: center;
+  opacity: 0;
+  z-index: -1;
+}
+.editor-block:hover .delete-block{
+  opacity: 1;
+  z-index: 1;
+  top: 100%;
+  transition-duration: 200ms;
+  padding-top: 3px;
+}
+.delete-block .fa{
+  background: dimgrey;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  color: white;
+  font-size: 12px;
+}
+.delete-block .fa:hover{
+  background: black;
+}
+
+.editor-block-location{
+  background: #66aeb5;
+}
+.editor-block-and{
+  background: #58b152;
+}
+.editor-block-or{
+  background: #5285b1;
+}
+.editor-block-ne{
+  background: #d65959;
+}
+.editor-block-left_bracket,
+.editor-block-right_bracket{
+  color: black;
+  font-size: 18px;
+  background: #dddddd;
+}
+.editor-block-device_model{
+  background: #9982b3;
+}
+.editor-block-device_type{
+  background: #82b386;
+}
+.editor-block-device_brand{
+  background: #b39682;
+}
+.editor-block-schedule{
+  background: #85AC5D;
+}
+.editor-block-rat{
+  background: #5d81ac;
+}
+.editor-block-apn{
+  background: #9e5c6b;
+}
+
+.editor-block input{
+  background: rgba(255, 255, 255, 0.5);
+  border: 0;
+  margin-left: 7px;
+  width: 100px;
+}
+
+.editor-block select{
+  height: 20px;
+}
+
+.caret{
+  width: 9px;
+  height: 2em;
+  display: inline-block;
+  vertical-align: middle;
+}
+.caret input{
+  display: none;
+}
+.caret input:checked ~ div{
+  display: block;
+  width: 1px;
+  height: 100%;
+  margin-left: 4px;
+  animation: blink-caret .75s step-end infinite;
+}
+
+.editor-panel{
+  background: white;
+  min-width: 100px;
+  min-height: 100px;
+  border: 1px solid #ddd;
+  padding: 4px 8px;
+}
+
+.editor-panel:focus,
+.editor-panel.focus{
+  outline: 1px solid #9fc6ff;
+}
+
+.editor-add-buttons li{
+  display: inline-block;
+}
+.editor-add-buttons div{
+  background: #5e90c1;
+  color: white;
+  cursor: pointer;
+  margin: 3px;
+  padding: 2px 8px;
+  border-radius: 3px;
+}
+.editor-add-buttons div:hover{
+  background: #256097;
+}
+
+.disabled-empty-text:disabled{
+  color: transparent;
+}
