--- a/src/styles.css
+++ b/src/styles.css
@@ -286,11 +286,11 @@ h1, h2, h3, h4, h5 {
   border: 0;
   margin-left: 7px;
   width: 100px;
-  height: auto;
+  height: 22px;
 }
 
 .editor-block select{
-  height: auto;
+  height: 24px;
 }
 
 .caret{
